tests/fixtures/invalid/dict_lt_float.py
# Cannot compare with < Dict[str, int] and Float
x: bool = {"a": 1} < 1.0
